Fix - related post on small device

--- a/style.css
+++ b/style.css
@@ -2193,7 +2193,7 @@ iframe#wp-custom-header-video {
 		padding-bottom: 20px;
 	}
 	.related-posts-wrapper .tg-one-third{
-		width: 46.3636%;
+		width: 48.1818%;
 		margin: 0 3.6364% 0 0;
 		float: left;
 	}
